--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "styled-components": "^6.1.13",
     "swiper": "^11.1.14",
     "zustand": "^5.0.0-rc.2"
   },
